python-flask/deploy/tanzu/.tanzu/config/httproute-python-flask.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/python-flask
  name: python-flask-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: python-flask
  rules:
  - backendRefs:
    - kind: Service
      name: python-flask
      port: 8080
